# runapp

./: LICENSE  lyfron.json  strucutre.txt
APK/Mobiles/: .cproject  .project  2fa.kt  AndroidManifest.xml  CMakeLists.txt  MainActivity.kt  WebRTC.kt  ad.xml  authNagivigation.kt  build.gradle.kts  callhub.cs  callscreen.kt  callviewModel.kt  editprofile.kt  email.kt  friend.kt  homescreen.kt  login.kt  notification.kt  post.kt  privacy.kt  profile.kt  profilescreen.kt  pss.kt  reelsAdapter.kt  reelsview.kt  request.kt  settings.kt  signin.kt  theme.kt  type.kt  verified.kt  videocall.ii  videoscreen.kt  webrtcManager.kt
APK/Mobiles/ai/: ai.kt  meme.kt  screen.kt
APK/Mobiles/security/: build.gradle.kts  jni.go  jniCmd.sh  lyfronBridge.kt  ml.py  rvm.kt  secure_enclave.c  vbm.kt
APK/Mobiles/src/: api_service.kt  authService.java  cookies.sql  main.go  processor.c  verified.go
APK/Mobiles/valid/: MockServer.kt  model.kt  validation.kt
cilent/core/: handshake.ii  handshake1.cpp  protocol.cpp  protocol.h
core/: bridge.go  bridge.kt
desktop/: AuthController.cs  MainWindow.xaml  MainWindow.xaml.cs  VerificationCode.cs  VerificationService.cs  ad.cs  ad.sql  adcontroller.cs  aditem.cs  adreelview.xaml  adreelview.xaml.cs  adservice.cs  adstyles.xaml  app.xml  appsettings.json  benefitItem.xaml  build.sh  build1.sh  buildother.sh  chat.xaml  chat.xaml.cs  chatModels.cs  chathub.cs  chatstyles.xaml  crypto.cs  hyperlink.cs  loginview.xml  loginview.xml.cs  lyfron.cs  mauiprogram.cs  notification.cs  notificationcontroller.cs  notificationconverts.cs  notificationhub.cs  notificationpanel.cs  notificationpanel.xml  notificationservice.cs  paycallback.cs  payment.cs  paymentService.cs  (+22 more)
drivers/: amdxdna.S  dump.S
lyfron/: lyfron.c  lyfron_secureboot.c
otl/: calc.go  dimg.go  premuim.json
otl-for ai/: emotions.go  physics.m  safety.go  token.go
protocol/: engine.go  main.go  types.go  types.h
runapp/ads/: api.ml  engine.ml  server.ml  sub.ml  types.ml  v.sql
videocalls/: .cproject  .project  CMakeLists.txt  build.sh  callhub.cs  callinvite.cs  callmanager.cs  callview.cs  callview.xaml  calview.xaml.cs  crypto.c  crypto.h  invitetoast.xaml  loginwidget.cpp  loginwidget.h  lyfron.h  lyfron_webrtc.h  lyfron_webrtc.ii  main.cpp  mainwindow.cpp  mainwindow.h  reelplayer.cpp  reelplayer.h  runapp.pro  webrtc.cs
